--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "lnetatmo>=4.2.0",
+    "pydantic>=2.10.6",
+    "pyyaml>=6.0.2",
 ]
 
 [build-system]
