early dev commit

--- a/sensor_configs/70:ee:50:7f:9d:32.yaml
+++ b/sensor_configs/70:ee:50:7f:9d:32.yaml
@@ -43,10 +43,10 @@ locations:
     name: BK Room 120
     description: Room 120 on the First Floor of the West Wing of the BK Building.
     properties: null
-    encodingType: plain/wkt
+    encodingType: application/geo+json
     location:
-      coordinates: POINT()
-      crs: WGS
+      type: Point
+      coordinates: [8.10, 50.00]
     iot_links:
       things:
         - Room 120
