--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "sensorthings-utils"
+name = "st-utils"
 version = "0.2.0"
 description = "Infrastructure and utilities for working with heterogeneous hazard-centric sensor data."
 readme = "README.md"
