introduce container environment variable
handles a conversion of generated urls when running in a container

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - database
     environment:
       - FROST_ENDPOINT=http://web:8080/FROST-Server/v1.1
+      - CONTAINER_ENVIRONMENT=true
     command: ["uv", "run", "/app/src/sensorthings_utils/main.py"]
 
   web:
