--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -47,11 +47,13 @@ services:
       - POSTGRES_PASSWORD=ChangeMe
     volumes:
       - postgis_volume:/var/lib/postgresql/data
+      - ./init-db.sh:/usr/local/bin/st-utils-init-db.sh
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d sensorthings -U sensorthings "]
+      test: ["CMD-SHELL", "pg_isready -d sensorthings -U sensorthings"]
       interval: 2s
       timeout: 2s
       retries: 10
+    entrypoint: ["/bin/sh", "-c", "chmod +x /usr/local/bin/st-utils-init-db.sh && /usr/local/bin/st-utils-init-db.sh"]
 
 volumes:
   postgis_volume:
