--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - database
     environment:
       - FROST_ENDPOINT=http://web:8080/FROST-Server/v1.1
-      # - FROST_USER=ChangeMe
+      - FROST_USER=sta-manager
       # - FROST_PASSWORD=ChangeMe
       - CONTAINER_ENVIRONMENT=true
     command: ["uv", "run", "/app/src/sensorthings_utils/main.py"]
@@ -24,13 +24,13 @@ services:
       - http_cors_allowed_origins=*
       - persistence_db_driver=org.postgresql.Driver
       - persistence_db_url=jdbc:postgresql://database:5432/sensorthings
-      # - persistence_db_username=ChangeMe
+      - persistence_db_username=sta-manager
       # - persistence_db_password=ChangeMe
       - persistence_autoUpdateDatabase=true
       - auth_provider=de.fraunhofer.iosb.ilt.frostserver.auth.basic.BasicAuthProvider
       - auth_db_driver=org.postgresql.Driver
       - auth_db_url=jdbc:postgresql://database:5432/sensorthings
-      # - auth_db_username=ChangeMe
+      - auth_db_username=sta-manager
       # - auth_db_password=ChangeMe
       - auth_autoUpdateDatabase=true
       - auth.allowAnonymousRead=true
@@ -45,13 +45,13 @@ services:
     image: postgis/postgis:16-3.4-alpine
     environment:
       - POSTGRES_DB=sensorthings
-      # - POSTGRES_USER=ChangeMe
+      - POSTGRES_USER=sta-manager
       # - POSTGRES_PASSWORD=ChangeMe
     volumes:
       - postgis_volume:/var/lib/postgresql/data
       - ./init-db.sh:/usr/local/bin/st-utils-init-db.sh
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d sensorthings -U sensorthings"]
+      test: ["CMD-SHELL", "pg_isready -d sta-manager -U sensorthings"]
       interval: 2s
       timeout: 2s
       retries: 10
@@ -59,4 +59,3 @@ services:
 
 volumes:
   postgis_volume:
-  python_app_volume:
