major wip commit

--- a/deploy/docker-compose.app.yml
+++ b/deploy/docker-compose.app.yml
@@ -8,7 +8,7 @@ name: st-utils
 services:
   python-app:
     secrets:
-      - FROST_PASSWORD
+      - application_credentials
     build:
       context: ..
       dockerfile: Dockerfile
@@ -20,11 +20,16 @@ services:
       - FROST_ENDPOINT=http://web:8080/FROST-Server/v1.1
       - CONTAINER_ENVIRONMENT=true
     volumes:
-      - python-app_credentials:/app/.credentials
+      - python-app_tokens:/app/deploy/secrets/tokens
       - python-app_logs:/app/logs
     command: ["uv", "run", "/app/src/sensorthings_utils/main.py"]
     restart: unless-stopped
 
 volumes:
-  python-app_credentials:
+  python-app_tokens:
   python-app_logs:
+
+secrets:
+  application_credentials:
+    file: ./secrets/credentials/application_credentials.json
+
