--- a/deploy/sensor_configs/milesight/24E124725E426631.yaml
+++ b/deploy/sensor_configs/milesight/24E124725E426631.yaml
@@ -1,13 +1,12 @@
-# SENSOR TYPE: Milesight AM308L
 # INSTRUCTIONS
 # 1 - Input the data near the *fill tag AND remove the tag
 # 2 - ONE (1) Sensor per config file,
 # 3 - Filename, sensor key / sensor name attribute should be device MAC address,
 # 4 - iot_links shall use entity NAMES to refer to other entities,
 sensors:
-  24E124725E426631:
+  milesight.am103l:
     name: 24E124725E426631
-    description: Milesight AM308L-LoRaWAN Indoor Air Quality Sensor (3 in 1)
+    description: Milesight AM103l-LoRaWAN Indoor Air Quality Sensor (3 in 1)
     metadata: https://resource.milesight.com/milesight/iot/document/am30x-datasheet-en.pdf
     encodingType: application/pdf
     properties:
@@ -175,9 +174,3 @@ observedProperties:
     description: ...
     properties: null
 
-
-networkMetadata:
-  sensor_model: milesight_am103L # duplication
-  application_name: multicare-acerra@ttn # typo in this caused a problem! did not match the creds.
-  host: eu1.cloud.thethings.network # the https:// led to an error.
- 
