--- a/deploy/sensor_configs/milesight/24E124725F036927.yaml
+++ b/deploy/sensor_configs/milesight/24E124725F036927.yaml
@@ -5,7 +5,7 @@
 # 3 - Filename, sensor key / sensor name attribute should be device MAC address,
 # 4 - iot_links shall use entity NAMES to refer to other entities,
 sensors:
-  24E124725F036927:
+  milesight.am308l:
     name: 24E124725F036927
     description: Milesight AM308L-LoRaWAN Indoor Air Quality Sensor (7 in 1)
     metadata: https://resource.milesight.com/milesight/iot/document/am30x-datasheet-en.pdf
@@ -342,8 +342,3 @@ observedProperties:
     description: ...
     properties: null
 
-networkMetadata:
-  sensor_model: milesight_am103L # duplication
-  application_name: multicare-acerra@ttn # typo in this caused a problem! did not match the creds.
-  host: eu1.cloud.thethings.network # the https:// led to an error.
- 
