Add HTTP Basic Authentication to webapp
- Add web.xml security constraints requiring webapp-users role
- Create init-webapp-auth.sh to handle FROST and webapp auth setup
- Mount tomcat-users.xml from secrets for user management
- Configure docker-compose.app.yml to mount tomcat-users.xml to Tomcat conf

--- a/deploy/docker-compose.app.yml
+++ b/deploy/docker-compose.app.yml
@@ -10,6 +10,9 @@ services:
     volumes:
       - ../web/st-utils:/usr/local/tomcat/webapps/st-utils
       - python-app_logs:/usr/local/tomcat/webapps/st-utils/logs:ro
+      - ./init-webapp-auth.sh:/init-webapp-auth.sh
+      - ./secrets/credentials/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml
+    entrypoint: ["/init-webapp-auth.sh"]
 
   python-app:
     secrets:
