--- a/deploy/sensor_configs/template.yaml
+++ b/deploy/sensor_configs/template.yaml
@@ -1,105 +1,98 @@
 # SENSOR TYPE: <Sensor Type>
 # INSTRUCTIONS
-# 1 - Input the data near the *fill tag AND remove the tag
-# 2 - ONE (1) Sensor per config file, 
-# 3 - Filename, sensor key / sensor name attribute should be device MAC address,
-# 4 - iot_links shall use entity NAMES to refer to other entities, 
+# 1 - Replace all placeholder values (indicated by <...> and comments)
+# 2 - ONE (1) Sensor per config file
+# 3 - Filename should match the sensor name (typically device MAC address)
+# 4 - Sensor key (in sensors section) can be <model>.<type> format (e.g., netatmo.nws03, milesight.am308l)
+# 5 - iot_links shall use entity NAMES to refer to other entities
+# 6 - Use YAML anchors (&) and aliases (*) to avoid repetition (see datastreams example)
 
 sensors:
-# the physical sensor 
-  *fill <MAC address>: 
-    name: *fill <must match line above (str)> 
-    description: *fill <str>
-    metadata: *fill <str>
-    encodingType: *fill <str>
-    properties: *fill <dict-like object or null> #e.g.:
+  # Sensor key format: <model>.<type> or use MAC address
+  # Example: netatmo.nws03, milesight.am308l, or 70:ee:50:7f:9d:32
+  <sensor_key>:  # Replace with actual sensor key
+    name: <sensor_name>  # Replace with sensor name (typically MAC address, must match filename)
+    description: <sensor_description>  # Replace with description
+    metadata: <metadata_url_or_none>  # Replace with URL or "none"
+    encodingType: <encoding_type>  # Replace with encoding type, e.g., "text", "application/pdf"
+    properties:  # Replace with dict or null
+      # Example properties (uncomment and modify as needed):
       #connectivity: Wi-Fi 802.11 b/g/n (2.4 GHz)
       #recording_frequency: 5 minutes
       #accuracy:
-        #temperature: 1°C
-        #humidity: 3%
-      #measurement_range:
-        #temperature: 0°C to 50°C
+      #  temperature: ± 0.3°C
+      #  humidity: 3%
     iot_links:
-      datastreams: *fill <array(datastream names(str))> 
-      # the datastreams that the sensor might have, for e.g.:
-        #- temperature_indoor
-        #- humidity
-things:
-# the physical Thing that the sensor monitors, could be a building, a room, a
-# componenet, anything.
-  *fill <thing name (str)>: 
-    name: *fill <must match line above (str)>
-    description: *fill <str>
-    properties: *fill <dict-like object or null> #e.g.,:
-      #type: room
-      #materials:
-        #wall: masonry
-        #floor: concrete
-      #occupants:
-        #- staff
-        #- students
-    iot_links:
-      datastreams: *fill <array(datastream names(str))>
-      locations: *fill <array(locations_names(str))> 
+      datastreams: &datastreams  # Use YAML anchor for reuse
+        - <datastream_name_1>  # Replace with actual datastream name
+        - <datastream_name_2>  # Replace with actual datastream name
+        # Add all datastream names here - one per measurement type
 
+things:
+  # The physical Thing that the sensor monitors (building, room, component, etc.)
+  <thing_name>:  # Replace with thing name
+    name: <thing_name>  # Replace - must match line above
+    description: <thing_description>  # Replace with description
+    properties:  # Replace with dict or null
+      # Example properties (uncomment and modify as needed):
+      #type: room
+      #floor: fourth
+      #room_type: living_room
+    iot_links:
+      datastreams: *datastreams  # Reference the anchor defined above
+      locations:
+        - <location_name>  # Replace with location name
 
 locations:
-# the physical location on Earth where the Thing is
-  *fill <location name (str)>: 
-    name: *fill <str>
-    description: fill <str>
-    properties: *fill <str>
+  # The physical location on Earth where the Thing is
+  <location_name>:  # Replace with location name
+    name: <location_name>  # Replace - must match line above
+    description: <location_description>  # Replace with description
+    properties:  # Replace with dict or null
     encodingType: application/geo+json
-    location: # Complies with GeoJSON schema: https://geojson.org/
-      type: *fill <literal (Position, Point, MultiPoint, LineString, Polygon,
-      MultiPolygon)
-      coordinates:  *fill <array (varies)> #depends on geometry type
+    location:  # Must comply with GeoJSON schema: https://geojson.org/
+      type: <geometry_type>  # Replace with Point, Polygon, LineString, etc.
+      coordinates: [<longitude>, <latitude>]  # Replace with coordinates
+        # For Point: [longitude, latitude]
+        # Example: [4.37034, 52.00482]
     iot_links:
-      things: *fill <array(things names(str))> #e.g.,:
-        #- gasket
+      things:
+        - <thing_name>  # Replace with thing name
 
 datastreams:
-  # quite crucially, there should be the same amount of datastreams as defined in the
-  # sensor item earlier.
-  *fill <datastream name(str)>:
-    name: *fill <must match line above (str)>
-    description:  *fill <str>
-    observationType: *fill <str>
-    unitOfMeasurement: &temperature
-      name: *fill <str>
-      symbol: *fill <str>
-      definition: *fill <url(str)>
-    observedArea: # Complies with GeoJSON schema: https://geojson.org/
-      type: <literal (Position, Point, MultiPoint, LineString, Polygon,
-      MultiPolygon)
-      coordinates: *fill <array (varies)> #depends on geometry type
-    phenomenon_time: *fill
-      - start: <unix timestamp or null>
-      - end: <unix timestamp or null> #TODO: #6 check validity of these hints
-    result_time: *fill
-      - start: <unix timestamp or null>
-      - end: <unix timestamp or null>
-    properties: *fill <dict-like object or null>
+  # IMPORTANT: Create one datastream for each datastream name listed in sensor iot_links
+  # All datastreams should be listed here
+  <datastream_name>:  # Replace with datastream name (must match name in sensor iot_links)
+    name: <datastream_name>  # Replace - must match line above
+    description: <datastream_description>  # Replace with description
+    observationType: instant  # Typically "instant" for real-time sensors
+    unitOfMeasurement: &temperature  # Use anchor for reuse across datastreams
+      name: <unit_name>  # Replace, e.g., "degree Celsius"
+      symbol: <unit_symbol>  # Replace, e.g., "°C"
+      definition: <unit_definition_url>  # Replace with UCUM definition URL
+    observedArea: &observedArea  # Use anchor for reuse
+      type: Polygon  # Replace with geometry type
+      coordinates: null  # Replace with array or null
+    phenomenon_time: null  # Typically null for instant observations
+    result_time: null  # Typically null for instant observations
+    properties: null  # Optional: Replace with dict or null
     iot_links:
       observedProperties:
-        - *fill <str> # ONE ObservedProperty, name should match
+        - <observedProperty_name>  # Replace - ONE ObservedProperty name (must match)
       sensors:
-        - *fill <str> # ONE Sensor, name should match
+        - <sensor_name>  # Replace - ONE Sensor name (must match sensor name field)
       things:
-        - *fill <str> # ONE Thing, name should match
+        - <thing_name>  # Replace - ONE Thing name (must match)
   
-  # more datastreams ...
+  # Add more datastreams as needed, one for each datastream in sensor iot_links
+  # Each datastream can reuse anchors (e.g., unitOfMeasurement: *temperature, observedArea: *observedArea)
 
 observedProperties:
-  *fill <observedProperty name(str)>:
-    name: *fill <must match line above (str)>
-    definition: *fill <str>
-    description: *fill <str>
-    properties: *fill <dict-like object or null>
-    iot_links:
-      datastreams: *fill <array(datastream names(str))> 
-
-networkMetadata:
-  network_name: *fill <str>
-  host: *fill <str or null> 
+  # Define one ObservedProperty for each datastream
+  <observedProperty_name>:  # Replace with observedProperty name
+    name: <observedProperty_name>  # Replace - must match line above
+    definition: <definition_url>  # Replace with URL or definition
+    description: <observedProperty_description>  # Replace with description
+    properties: null  # Optional: Replace with dict or null
+  # Note: ObservedProperties do NOT have iot_links
+  # Add more observedProperties as needed, one for each datastream
