--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pyyaml>=6.0.2",
     "requests>=2.32.5",
+    "typer>=0.12.0",
+    "rich>=13.7.0",
 ]
 
 [project.scripts]
