--- a/deploy/docker-compose.app-public.yml
+++ b/deploy/docker-compose.app-public.yml
@@ -1,8 +1,8 @@
 # docker-compose.app-public.yml
-# NOT FOR PRODUCTION ##################################
+#  FOR PRODUCTION #####################################
 # Must be merged with the base compose.               #
 # - Adds the python application                       #
-# - Public access: no tomcat-users.xml or web.xml    #
+# - Public access: no tomcat-users.xml or web.xml     #
 # #####################################################
 name: st-utils
 
@@ -26,12 +26,16 @@ services:
       - web
       - database
       - mosquitto
+    env_file:
+      - path: ../.env
+      - required: false
     environment:
       - FROST_ENDPOINT=http://web:8080/FROST-Server/v1.1
       - CONTAINER_ENVIRONMENT=true
     volumes:
       - python-app_tokens:/app/deploy/secrets/tokens
       - python-app_logs:/app/logs
+      - ${SENSOR_CONFIG_PATH:-./sensor_configs}:/app/deploy/sensor_configs
     command: ["uv", "run", "/app/src/sensorthings_utils/main.py"]
     restart: unless-stopped
 
