add mount points to docker compose

--- a/deploy/docker-compose.app.yml
+++ b/deploy/docker-compose.app.yml
@@ -28,8 +28,8 @@ services:
       - database
       - mosquitto
     env_file:
-      - path: ../.env
-      - required: false
+      - path: .env
+        required: false
     environment:
       - FROST_ENDPOINT=http://web:8080/FROST-Server/v1.1
       - CONTAINER_ENVIRONMENT=true
@@ -37,6 +37,7 @@ services:
       - python-app_tokens:/app/deploy/secrets/tokens
       - python-app_logs:/app/logs
       - ${SENSOR_CONFIG_PATH:-./sensor_configs}:/app/deploy/sensor_configs
+      - ${APPLICATION_CONFIG_FILE:-./application-configs.yml}:/app/deploy/application-config.yml
     command: ["uv", "run", "/app/src/sensorthings_utils/main.py"]
     restart: unless-stopped
 
