--- a/deploy/docker-compose.app-public.yml
+++ b/deploy/docker-compose.app-public.yml
@@ -27,15 +27,16 @@ services:
       - database
       - mosquitto
     env_file:
-      - path: ../.env
-      - required: false
+      - path: .env
+        required: false
     environment:
       - FROST_ENDPOINT=http://web:8080/FROST-Server/v1.1
       - CONTAINER_ENVIRONMENT=true
     volumes:
       - python-app_tokens:/app/deploy/secrets/tokens
       - python-app_logs:/app/logs
-      - ${SENSOR_CONFIG_PATH:-./sensor_configs}:/app/deploy/sensor_configs
+      - ${SENSOR_CONFIG_PATH:-./sensor_configs}:/app/deploy/sensor_configs/
+      - ${APPLICATION_CONFIG_FILE:-./application-configs.yml}:/app/deploy/application-configs.yml
     command: ["uv", "run", "/app/src/sensorthings_utils/main.py"]
     restart: unless-stopped
 
